<resources>
    <string name="app_name">Tuber</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_out">Sign out</string>
    <string name="action_sign_in_short">Sign in</string>

    <!-- Login Activity -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_email_confirm">Confirm Email</string>
    <string name="prompt_password_confirm">Confirm Password</string>

    <string name="action_login_submit">Login</string>
    <string name="action_login_switch">Back to Login</string>
    <string name="action_register_submit">Register</string>
    <string name="action_register_switch">Create Account</string>

    <string name="error_field_required">This field is required</string>

    <string name="error_unknown_email">Email not found</string>
    <string name="error_invalid_email">Email invalid</string>
    <string name="error_repeat_email">Email already in use</string>
    <string name="error_mismatch_email">Does not match Email</string>

    <string name="error_incorrect_password">Password does not match username</string>
    <string name="error_invalid_password">Password invalid</string>
    <string name="error_mismatch_password">Does not match Password</string>

    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
</resources>
