<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="edu.pitt.coe.tuber.LoginActivity"
    tools:showIn="@layout/activity_login">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/email_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:errorEnabled="true"
        app:theme="@style/Widget.Design.TextInputLayout">

        <AutoCompleteTextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/prompt_email"
            android:inputType="textPersonName"
            android:selectAllOnFocus="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/email_confirm_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:errorEnabled="true"
        app:theme="@style/Widget.Design.TextInputLayout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/email_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/prompt_email_confirm"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true"
        app:theme="@style/Widget.Design.TextInputLayout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:selectAllOnFocus="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_confirm_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true"
        app:theme="@style/Widget.Design.TextInputLayout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/prompt_password_confirm"
            android:inputType="textPassword"
            android:selectAllOnFocus="true" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_login_submit" />

    <Button
        android:id="@+id/switch_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_register_switch" />

</LinearLayout>
